@@ -1,27 +1,24 @@
 package forge.game.ability.effects;
 
 import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 import forge.util.*;
 import org.apache.commons.lang3.StringUtils;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Lists;
 
 import forge.GameCommand;
-import forge.card.CardType;
 import forge.game.Game;
 import forge.game.GameEntity;
 import forge.game.ability.AbilityUtils;
 import forge.game.ability.SpellAbilityEffect;
 import forge.game.card.Card;
-import forge.game.card.CardCollection;
 import forge.game.card.CardFactoryUtil;
 import forge.game.card.CardUtil;
+import forge.game.card.perpetual.PerpetualKeywords;
+import forge.game.card.perpetual.PerpetualPTBoost;
 import forge.game.event.GameEventCardStatsChanged;
 import forge.game.player.Player;
 import forge.game.player.PlayerCollection;
@@ -37,7 +34,7 @@ public class PumpEffect extends SpellAbilityEffect {
         final Card host = sa.getHostCard();
         final Game game = host.getGame();
         final String duration = sa.getParam("Duration");
-        final boolean perpetual = ("Perpetual").equals(duration);
+        final boolean perpetual = "Perpetual".equals(duration);
 
         // do Game Check there in case of LKI
         final Card gameCard = game.getCardState(applyTo, null);
@@ -59,12 +56,7 @@ public class PumpEffect extends SpellAbilityEffect {
 
         if (a != 0 || d != 0) {
             if (perpetual) {
-                Map <String, Object> params = new HashMap<>();
-                params.put("Power", a);
-                params.put("Toughness", d);
-                params.put("Timestamp", timestamp);
-                params.put("Category", "PTBoost");
-                gameCard.addPerpetual(params);
+                gameCard.addPerpetual(new PerpetualPTBoost(timestamp, a, d));
             }
             gameCard.addPTBoost(a, d, timestamp, 0);
             redrawPT = true;
@@ -72,11 +64,7 @@ public class PumpEffect extends SpellAbilityEffect {
 
         if (!kws.isEmpty()) {
             if (perpetual) {
-                Map <String, Object> params = new HashMap<>();
-                params.put("AddKeywords", kws);
-                params.put("Timestamp", timestamp);
-                params.put("Category", "Keywords");
-                gameCard.addPerpetual(params);
+                gameCard.addPerpetual(new PerpetualKeywords(timestamp, kws, Lists.newArrayList(), false));
             }
             gameCard.addChangedCardKeywords(kws, Lists.newArrayList(), false, timestamp, null);
         }
@@ -141,7 +129,7 @@ public class PumpEffect extends SpellAbilityEffect {
         final String duration = sa.getParam("Duration");
 
         if (!keywords.isEmpty()) {
-            p.addChangedKeywords(keywords, ImmutableList.of(), timestamp, 0);
+            p.addChangedKeywords(keywords, List.of(), timestamp, 0);
         }
 
         if (!"Permanent".equals(duration)) {
@@ -291,6 +279,17 @@ public class PumpEffect extends SpellAbilityEffect {
         List<Card> tgtCards = getCardsfromTargets(sa);
         List<Player> tgtPlayers = getTargetPlayers(sa);
 
+        if (sa.hasParam("Optional")) {
+            final String targets = Lang.joinHomogenous(tgtCards);
+            final String message = sa.hasParam("OptionQuestion")
+                    ? TextUtil.fastReplace(sa.getParam("OptionQuestion"), "TARGETS", targets)
+                    : Localizer.getInstance().getMessage("lblApplyPumpToTarget", targets);
+
+            if (!activator.getController().confirmAction(sa, null, message, null)) {
+                return;
+            }
+        }
+
         List<String> keywords = Lists.newArrayList();
         if (sa.hasParam("KW")) {
             keywords.addAll(Arrays.asList(sa.getParam("KW").split(" & ")));
@@ -303,10 +302,10 @@ public class PumpEffect extends SpellAbilityEffect {
         
         int a = 0;
         int d = 0;
-        if (sa.hasParam("NumAtt") && !sa.getParam("NumAtt").equals("Double")) {
+        if (sa.hasParam("NumAtt") && !sa.getParam("NumAtt").equals("Double") && !sa.getParam("NumAtt").equals("Triple")) {
             a = AbilityUtils.calculateAmount(host, sa.getParam("NumAtt"), sa, true);
         }
-        if (sa.hasParam("NumDef") && !sa.getParam("NumDef").equals("Double")) {
+        if (sa.hasParam("NumDef") && !sa.getParam("NumDef").equals("Double") && !sa.getParam("NumDef").equals("Triple")) {
             d = AbilityUtils.calculateAmount(host, sa.getParam("NumDef"), sa, true);
         }
 
@@ -315,8 +314,6 @@ public class PumpEffect extends SpellAbilityEffect {
             String[] restrictions = sa.hasParam("SharedRestrictions") ? sa.getParam("SharedRestrictions").split(",") : new String[]{"Card"};
             keywords = CardFactoryUtil.sharedKeywords(keywords, restrictions, zones, host, sa);
         }
-
-        final CardCollection untargetedCards = CardUtil.getRadiance(sa);
 
         if (sa.hasParam("DefinedKW")) {
             String defined = sa.getParam("DefinedKW");
@@ -375,10 +372,8 @@ public class PumpEffect extends SpellAbilityEffect {
         if (sa.hasParam("DefinedLandwalk")) {
             final String landtype = sa.getParam("DefinedLandwalk");
             for (final Card c : AbilityUtils.getDefinedCards(host, landtype, sa)) {
-                for (String type : c.getType()) {
-                    if (CardType.isALandType(type)) {
-                        keywords.add("Landwalk:" +type);
-                    }
+                for (String type : c.getType().getLandTypes()) {
+                    keywords.add("Landwalk:" +type);
                 }
             }
         }
@@ -401,17 +396,6 @@ public class PumpEffect extends SpellAbilityEffect {
                 total.remove(random);
             }
             keywords = choice;
-        }
-
-        if (sa.hasParam("Optional")) {
-            final String targets = Lang.joinHomogenous(tgtCards);
-            final String message = sa.hasParam("OptionQuestion")
-                    ? TextUtil.fastReplace(sa.getParam("OptionQuestion"), "TARGETS", targets)
-                    : Localizer.getInstance().getMessage("lblApplyPumpToTarget", targets);
-
-            if (!activator.getController().confirmAction(sa, null, message, null)) {
-                return;
-            }
         }
 
         if (sa.hasParam("RememberObjects")) {
@@ -488,6 +472,13 @@ public class PumpEffect extends SpellAbilityEffect {
                 d = tgtC.getNetToughness();
             }
 
+            if (sa.hasParam("NumAtt") && sa.getParam("NumAtt").equals("Triple")) {
+                a = tgtC.getNetPower() *2;
+            }
+            if (sa.hasParam("NumDef") && sa.getParam("NumDef").equals("Triple")) {
+                d = tgtC.getNetToughness() *2;
+            }
+
             applyPump(sa, tgtC, a, d, affectedKeywords, timestamp);
         }
 
@@ -495,7 +486,7 @@ public class PumpEffect extends SpellAbilityEffect {
             registerDelayedTrigger(sa, sa.getParam("AtEOT"), tgtCards);
         }
 
-        for (final Card tgtC : untargetedCards) {
+        for (final Card tgtC : CardUtil.getRadiance(sa)) {
             // only pump things in PumpZone
             if (!tgtC.isInZones(pumpZones)) {
                 continue;
