@@ -17,12 +17,9 @@
  */
 package forge.game.zone;
 
-import com.esotericsoftware.minlog.Log;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Lists;
-import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
-import forge.GameCommand;
+
 import forge.game.*;
 import forge.game.ability.AbilityKey;
 import forge.game.ability.AbilityUtils;
@@ -39,6 +36,7 @@ import forge.game.player.PlayerPredicates;
 import forge.game.spellability.AbilityStatic;
 import forge.game.spellability.SpellAbility;
 import forge.game.spellability.SpellAbilityStackInstance;
+import forge.game.spellability.SpellAbilityView;
 import forge.game.spellability.TargetChoices;
 import forge.game.trigger.Trigger;
 import forge.game.trigger.TriggerType;
@@ -49,6 +47,7 @@ import java.util.*;
 import java.util.Map.Entry;
 import java.util.concurrent.LinkedBlockingDeque;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 /**
  * <p>
@@ -77,7 +76,6 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
     private final List<SpellAbility> thisTurnActivated = Lists.newArrayList();
 
     private Card curResolvingCard = null;
-    private final Map<String, List<GameCommand>> commandList = Maps.newHashMap();
 
     private final Game game;
 
@@ -187,6 +185,10 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
         return c.equals(curResolvingCard);
     }
 
+    public int getUndoStackSize() {
+        return undoStack.size();
+    }
+
     public final boolean canUndo(Player player) {
         return undoStackOwner == player;
     }
@@ -246,14 +248,22 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
 
     public final void add(SpellAbility sp, SpellAbilityStackInstance si, int id) {
         final Card source = sp.getHostCard();
-        Player activator = sp.getActivatingPlayer();
 
         // if activating player slips through the cracks, assign activating
         // Player to the controller here
-        if (null == activator) {
+        if (sp.getActivatingPlayer() == null) {
             sp.setActivatingPlayer(source.getController());
-            activator = sp.getActivatingPlayer();
             System.out.println(source.getName() + " - activatingPlayer not set before adding to stack.");
+        }
+        Player activator = sp.getActivatingPlayer();
+
+        // Stop infinite loop. E.g. Scalelord Reckoner mirrormatch with only triggering targets is a draw.
+        if (game.getStack().size() > 999) {
+            for (Player p : game.getPlayers()) {
+                p.intentionalDraw();
+            }
+            game.setGameOver(GameEndReason.Draw);
+            return;
         }
 
         recordUndoableActions(sp, activator);
@@ -267,7 +277,7 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
                 addAbilityActivatedThisTurn(sp, source);
             }
 
-            Map<AbilityKey, Object> runParams = AbilityKey.mapFromPlayer(source.getController());
+            Map<AbilityKey, Object> runParams = AbilityKey.newMap();
             runParams.put(AbilityKey.Activator, activator);
             runParams.put(AbilityKey.SpellAbility, sp);
             game.getTriggerHandler().runTrigger(TriggerType.SpellAbilityCast, runParams, true);
@@ -281,7 +291,7 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
             runParams.put(AbilityKey.SpellAbility, sp);
             game.getTriggerHandler().runTrigger(TriggerType.AbilityResolves, runParams, false);
 
-            game.getGameLog().add(GameLogEntryType.MANA, source + " - " + sp);
+            game.fireEvent(new GameEventAddLog(GameLogEntryType.MANA, source + " - " + sp));
             sp.resetOnceResolved();
 
             // parts are paid sequentially, so collect directly or some trigger might get lost
@@ -310,16 +320,14 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
         if (!sp.isCopied() && !hasLegalTargeting(sp)) {
             String str = source + " - [Couldn't add to stack, failed to target] - " + sp.getDescription();
             System.err.println(str + sp.getAllTargetChoices());
-            game.getGameLog().add(GameLogEntryType.STACK_ADD, str);
+            game.fireEvent(new GameEventAddLog(GameLogEntryType.STACK_ADD, str));
             return;
         }
 
-        //cancel auto-pass for all opponents of activating player
-        //when a new non-triggered ability is put on the stack
-        if (!sp.isTrigger()) {
-            for (final Player p : activator.getOpponents()) {
-                p.getController().autoPassCancel();
-            }
+        if (sp instanceof AbilityStatic || (sp.isTrigger() && sp.getTrigger().getOverridingAbility() instanceof AbilityStatic)) {
+            AbilityUtils.resolve(sp);
+            // AbilityStatic should do nothing below
+            return;
         }
 
         if (si == null && sp.isActivatedAbility() && !sp.isCopied()) {
@@ -345,56 +353,28 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
             addAbilityActivatedThisTurn(sp, source);
         }
 
-        if (sp instanceof AbilityStatic || (sp.isTrigger() && sp.getTrigger().getOverridingAbility() instanceof AbilityStatic)) {
-            AbilityUtils.resolve(sp);
-            // AbilityStatic should do nothing below
-            return;
-        }
-
         // The ability is added to stack HERE
         si = push(sp, si, id);
 
         // Copied spells aren't cast per se so triggers shouldn't run for them.
-        Map<AbilityKey, Object> runParams = AbilityKey.mapFromPlayer(sp.getHostCard().getController());
+        Map<AbilityKey, Object> runParams = AbilityKey.newMap();
 
         if (sp.isSpell() && !sp.isCopied()) {
-            final Card lki = CardCopyService.getLKICopy(sp.getHostCard());
+            final Card lki = CardCopyService.getLKICopy(source);
             runParams.put(AbilityKey.CardLKI, lki);
             thisTurnCast.add(lki);
             sp.getActivatingPlayer().addSpellCastThisTurn();
 
             // Add expend mana
-            Map<Player, Integer> expendPlayers = Maps.newHashMap();
+            Map<Player, Long> expendPlayers = sp.getPayingMana().stream().collect(Collectors.groupingBy(Mana::getPlayer, Collectors.counting()));
 
-            for (Mana m : sp.getPayingMana()) {
-                // TODO this currently assumes that all mana came from your own pool
-                // but with Assist some might belong to another player instead
-                Player manaPayer = sp.getActivatingPlayer();
-
-                expendPlayers.put(manaPayer, expendPlayers.getOrDefault(manaPayer, 0) + 1);
-            }
-
-            for (Entry<Player, Integer> entry : expendPlayers.entrySet()) {
-                Player manaPayer = entry.getKey();
-                int startingMana =  manaPayer.getExpentThisTurn();
-                int totalMana = startingMana + entry.getValue();
-
-                if (totalMana == 0) {
-                    continue;
-                }
-
-                manaPayer.setExpentThisTurn(totalMana);
-                for (int i = startingMana + 1; i <= totalMana; i++) {
-                    Map<AbilityKey, Object> expendParams = AbilityKey.mapFromPlayer(manaPayer);
-                    expendParams.put(AbilityKey.SpellAbility, sp);
-                    expendParams.put(AbilityKey.Amount, i);
-                    game.getTriggerHandler().runTrigger(TriggerType.ManaExpend, expendParams, true);
-                }
+            for (Entry<Player, Long> entry : expendPlayers.entrySet()) {
+                entry.getKey().addExpentThisTurn((int)(long)entry.getValue(), sp);
             }
         }
 
-        runParams.put(AbilityKey.Activator, sp.getActivatingPlayer());
-        runParams.put(AbilityKey.SpellAbility, si.getSpellAbility());
+        runParams.put(AbilityKey.Activator, activator);
+        runParams.put(AbilityKey.SpellAbility, sp);
         runParams.put(AbilityKey.CurrentStormCount, thisTurnCast.size());
         runParams.put(AbilityKey.CurrentCastSpells, Lists.newArrayList(thisTurnCast));
 
@@ -411,7 +391,6 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
                     activator.incCommanderCast(source);
                 }
                 game.getTriggerHandler().runTrigger(TriggerType.SpellCast, runParams, true);
-                executeCastCommand(si.getSpellAbility().getHostCard());
             }
 
             // Run AbilityCast triggers
@@ -419,28 +398,42 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
                 game.getTriggerHandler().runTrigger(TriggerType.AbilityCast, runParams, true);
             }
 
+            if (sp.getMaxWaterbend() != null) {
+                activator.triggerElementalBend(TriggerType.Waterbend);
+            }
+
             // Run Cycled triggers
             if (sp.isCycling()) {
                 activator.addCycled(sp);
             }
 
-            if (sp.isCrew() && sp.getHostCard().getType().hasSubtype("Vehicle")) {
+            if (sp.isCrew() && source.getType().hasSubtype("Vehicle")) {
                 Iterable<Card> crews = sp.getPaidList("Tapped", true);
                 if (crews != null) {
                     for (Card c : crews) {
-                        Map<AbilityKey, Object> crewParams = AbilityKey.mapFromCard(sp.getHostCard());
+                        Map<AbilityKey, Object> crewParams = AbilityKey.mapFromCard(source);
                         crewParams.put(AbilityKey.Crew, c);
                         game.getTriggerHandler().runTrigger(TriggerType.Crewed, crewParams, false);
                     }
                 }
             }
-            if (sp.isKeyword(Keyword.SADDLE) && sp.getHostCard().getType().hasSubtype("Mount")) {
+            if (sp.isKeyword(Keyword.SADDLE) && source.getType().hasSubtype("Mount")) {
                 Iterable<Card> crews = sp.getPaidList("Tapped", true);
                 if (crews != null) {
                     for (Card c : crews) {
-                        Map<AbilityKey, Object> saddleParams = AbilityKey.mapFromCard(sp.getHostCard());
+                        Map<AbilityKey, Object> saddleParams = AbilityKey.mapFromCard(source);
                         saddleParams.put(AbilityKey.Crew, c);
                         game.getTriggerHandler().runTrigger(TriggerType.Saddled, saddleParams, false);
+                    }
+                }
+            }
+            if (sp.isKeyword(Keyword.STATION) && (source.getType().hasSubtype("Spacecraft") || (source.getType().hasSubtype("Planet")))) {
+                Iterable<Card> crews = sp.getPaidList("Tapped", true);
+                if (crews != null) {
+                    for (Card c : crews) {
+                        Map<AbilityKey, Object> stationParams = AbilityKey.mapFromCard(source);
+                        stationParams.put(AbilityKey.Crew, c);
+                        game.getTriggerHandler().runTrigger(TriggerType.Stationed, stationParams, false);
                     }
                 }
             }
@@ -495,17 +488,15 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
             game.getTriggerHandler().runTrigger(TriggerType.BecomesTargetOnce, runParams, false);
         }
 
-        if (sp.getActivatingPlayer() != null && commitCrimeCheck(sp.getActivatingPlayer(), chosenTargets)) {
-            sp.getActivatingPlayer().commitCrime();
+        if (commitCrimeCheck(activator, chosenTargets)) {
+            activator.commitCrime();
         }
 
-        game.fireEvent(new GameEventZone(ZoneType.Stack, sp.getActivatingPlayer(), EventValueChangeType.Added, source));
+        game.fireEvent(new GameEventZone(ZoneType.Stack, sp, EventValueChangeType.Added));
 
-        if (sp.getActivatingPlayer() != null && !game.getCardsPlayerCanActivateInStack().isEmpty()) {
+        if (!game.getCardsPlayerCanActivateInStack().isEmpty()) {
             // This is a bit of a hack that forces the update of externally activatable cards in flashback zone (e.g. Lightning Storm).
-            for (Player p : game.getPlayers()) {
-                p.updateFlashbackForView();
-            }
+            game.getPlayers().forEach(Player::updateFlashbackForView);
         }
     }
 
@@ -567,7 +558,8 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
             game.getPhaseHandler().setPriority(sp.getActivatingPlayer());
         }
 
-        GameActionUtil.checkStaticAfterPaying(sp.getHostCard());
+        sp.getHostCard().getGame().getAction().checkStaticAbilities(false);
+        sp.getHostCard().getGame().getTriggerHandler().resetActiveTriggers();
 
         game.updateStackForView();
         game.fireEvent(new GameEventSpellAbilityCast(sp, si, stackIndex));
@@ -594,7 +586,7 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
         final Card source = sa.getHostCard();
         curResolvingCard = source;
 
-        boolean thisHasFizzled = hasFizzled(sa, source, null);
+        boolean thisHasFizzled = hasFizzled(sa, null);
 
         if (!thisHasFizzled) {
             game.copyLastState();
@@ -621,9 +613,6 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
                 first.setActivatingPlayer(sa.getActivatingPlayer());
                 game.fireEvent(new GameEventCardStatsChanged(source));
                 AbilityUtils.resolve(first);
-            } else {
-                // TODO: Spell fizzles, what's the best way to alert player?
-                Log.debug(source.getName() + " ability fizzles.");
             }
         } else if (sa.getApi() != null) {
             AbilityUtils.handleRemembering(sa);
@@ -715,7 +704,7 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
         return hasLegalTargeting(sa.getSubAbility());
     }
 
-    private boolean hasFizzled(final SpellAbility sa, final Card source, Boolean fizzle) {
+    private boolean hasFizzled(final SpellAbility sa, Boolean fizzle) {
         List<GameObject> toRemove = Lists.newArrayList();
         if (sa.usesTargeting() && !sa.isZeroTargets()) {
             if (fizzle == null) {
@@ -755,7 +744,7 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
             }
         }
         if (sa.getSubAbility() != null) {
-            fizzle = hasFizzled(sa.getSubAbility(), source, fizzle);
+            fizzle = hasFizzled(sa.getSubAbility(), fizzle);
         }
 
         // Remove targets
@@ -777,8 +766,7 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
         stack.remove(si);
         frozenStack.remove(si);
         game.updateStackForView();
-        SpellAbility sa = si.getSpellAbility();
-        game.fireEvent(new GameEventSpellRemovedFromStack(sa));
+        game.fireEvent(new GameEventSpellRemovedFromStack(SpellAbilityView.get(si.getSpellAbility())));
     }
 
     public final void remove(final Card c) {
@@ -838,32 +826,26 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
     }
 
     public boolean addAllTriggeredAbilitiesToStack() {
-        boolean result = false;
-        Player playerTurn = game.getPhaseHandler().getPlayerTurn();
+        if (!hasSimultaneousStackEntries()) {
+            return false;
+        }
 
+        Player playerTurn = game.getPhaseHandler().getPlayerTurn();
         if (playerTurn == null) {
             // caused by DevTools before first turn
             return false;
         }
-
         if (!playerTurn.isInGame()) {
             playerTurn = game.getNextPlayerAfter(playerTurn);
         }
-
-        // Grab players in turn order starting with the active player
         List<Player> players = game.getPlayersInTurnOrder(playerTurn);
 
+        boolean result = false;
+        // CR 603.3b
         for (Player p : players) {
-            if (p.hasLost()) {
-                continue;
-            }
             result |= chooseOrderOfSimultaneousStackEntry(p, false);
         }
-
         for (Player p : players) {
-            if (p.hasLost()) {
-                continue;
-            }
             result |= chooseOrderOfSimultaneousStackEntry(p, true);
         }
 
@@ -871,10 +853,12 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
     }
 
     private boolean chooseOrderOfSimultaneousStackEntry(final Player activePlayer, boolean isAbilityTriggered) {
-        if (simultaneousStackEntryList.isEmpty()) {
+        if (!activePlayer.isInGame()) {
             return false;
         }
-
+        if (!hasSimultaneousStackEntries()) {
+            return false;
+        }
         activePlayerSAs.clear();
         for (SpellAbility sa : simultaneousStackEntryList) {
             if (isAbilityTriggered != (sa.isTrigger() && sa.getTrigger().getMode() == TriggerType.AbilityTriggered)) {
@@ -902,14 +886,14 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
         return true;
     }
 
-    // 400.7f Abilities of Auras that trigger when the enchanted permanent leaves the battlefield
+    // CR 400.7f Abilities of Auras that trigger when the enchanted permanent leaves the battlefield
     // can find the new object that Aura became in its owner’s graveyard
-    public void adjustAuraHost(SpellAbility sa) {
+    private void adjustAuraHost(SpellAbility sa) {
         final Card host = sa.getHostCard();
         final Trigger trig = sa.getTrigger();
         final Card newHost = game.getCardState(host);
-        if (host.isAura() && newHost.isInZone(ZoneType.Graveyard) && trig.getMode() == TriggerType.ChangesZone && 
-                "Battlefield".equals(trig.getParam("Origin")) && "Card.EnchantedBy".equals(trig.getParam("ValidCard"))) {
+        if (host.isAura() && newHost.isInZone(ZoneType.Graveyard) && trig.getMode() == TriggerType.ChangesZone && "Battlefield".equals(trig.getParam("Origin"))
+                && trig.hasParam("ValidCard") && trig.getParam("ValidCard").startsWith("Card.EnchantedBy")) {
             sa.setHostCard(newHost);
         }
     }
@@ -952,16 +936,15 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
         final Player active = game.getPhaseHandler().getPlayerTurn();
         game.getStackZone().resetCardsAddedThisTurn();
         this.thisTurnActivated.clear();
+        active.resetSpellCastSinceBegOfYourLastTurn();
         if (thisTurnCast.isEmpty()) {
             lastTurnCast = Lists.newArrayList();
-            active.resetSpellCastSinceBegOfYourLastTurn();
             return;
         }
-        for (Player nonActive : game.getNonactivePlayers()) {
-            nonActive.addSpellCastSinceBegOfYourLastTurn(thisTurnCast);
+        for (Player player : game.getPlayers()) {
+            player.addSpellCastSinceBegOfYourLastTurn(thisTurnCast);
         }
         lastTurnCast = Lists.newArrayList(thisTurnCast);
-        active.setSpellCastSinceBegOfYourLastTurn(thisTurnCast);
         thisTurnCast.clear();
         game.updateStackForView();
     }
@@ -973,29 +956,6 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
 
     public List<SpellAbility> getAbilityActivatedThisTurn() {
         return thisTurnActivated;
-    }
-
-    public final void addCastCommand(final String valid, final GameCommand c) {
-        if (commandList.containsKey(valid)) {
-            commandList.get(valid).add(0, c);
-        } else {
-            commandList.put(valid, Lists.newArrayList(c));
-        }
-    }
-
-    private void executeCastCommand(final Card cast) {
-        for (Entry<String, List<GameCommand>> ev : commandList.entrySet()) {
-            if (cast.getType().hasStringType(ev.getKey())) {
-                execute(ev.getValue());
-            }
-        }
-    }
-
-    private static void execute(final List<GameCommand> c) {
-        final int length = c.size();
-        for (int i = 0; i < length; i++) {
-            c.remove(0).run();
-        }
     }
 
     public final boolean hasSourceOnStack(final Card source, final Predicate<SpellAbility> pred) {
@@ -1041,7 +1001,7 @@ public class MagicStack /* extends MyObservable */ implements Iterable<SpellAbil
     }
 
     static protected boolean commitCrimeCheck(Player p, Iterable<TargetChoices> chosenTargets) {
-        List<ZoneType> zoneList = ImmutableList.of(ZoneType.Battlefield, ZoneType.Graveyard, ZoneType.Stack);
+        List<ZoneType> zoneList = List.of(ZoneType.Battlefield, ZoneType.Graveyard, ZoneType.Stack);
 
         for (TargetChoices tc : chosenTargets) {
             if (IterableUtil.any(tc.getTargetPlayers(), PlayerPredicates.isOpponentOf(p))) {
