@@ -20,6 +20,7 @@ import forge.adventure.data.EffectData;
 import forge.adventure.data.EnemyData;
 import forge.adventure.data.RewardData;
 import forge.adventure.player.AdventurePlayer;
+import forge.adventure.util.Config;
 import forge.adventure.util.Current;
 import forge.adventure.util.MapDialog;
 import forge.adventure.util.Reward;
@@ -63,6 +64,7 @@ public class EnemySprite extends CharacterSprite implements Steerable<Vector2> {
     public MapDialog defeatDialog; //Dialog to show on defeat. Overrides standard death (can be removed as an action)
     public EffectData effect; //Battle effect for this enemy. Similar to a player's blessing.
     public String nameOverride = ""; //Override name of this enemy in battles.
+    public String bossInsult = ""; //Override the generated insult text when you are defeated.
     public RewardData[] rewards; //Additional rewards for this enemy.
     public DialogData.ConditionData spawnCondition; //Condition to spawn.
     public LinkedList<MovementBehavior> movementBehaviors = new LinkedList<>();
@@ -440,7 +442,12 @@ public class EnemySprite extends CharacterSprite implements Steerable<Vector2> {
             return data.getName();
         return nameOverride;
     }
-
+    public String getBossInsult(){
+        return data.bossInsult;
+    }
+    public String getBossIntro(){
+        return data.bossIntro;
+    }
     public Array<Reward> getRewards() {
         Array<Reward> rewards = new Array<>();
         //Collect custom rewards for chaos battles
@@ -448,9 +455,11 @@ public class EnemySprite extends CharacterSprite implements Steerable<Vector2> {
         if (data.copyPlayerDeck && Current.latestDeck() != null) {
             List<PaperCard> paperCardList = Current.latestDeck().getMain().toFlatList().stream()
                     .filter(paperCard -> !paperCard.isVeryBasicLand())
-                    .toList();
+                    .collect(Collectors.toList());
 
-            if (paperCardList.size() < 6) {
+            int uniqueRules = paperCardList.stream().map(PaperCard::getRules).collect(Collectors.toSet()).size();
+
+            if (uniqueRules < 4 || paperCardList.size() < 10) {
                 // Player trying to cheese doppleganger and farm cards. Sorry, the fun police have arrived
                 // Static rewards of 199 GP, 9 Shards, and 1 Cheese Stands Alone
                 rewards.add(new Reward(199));
@@ -466,7 +475,7 @@ public class EnemySprite extends CharacterSprite implements Steerable<Vector2> {
             if (AdventurePlayer.current().isFantasyMode()) {
                 //random uncommons from deck
                 List<PaperCard> uncommonCards = paperCardList.stream()
-                        .filter(paperCard -> CardRarity.Uncommon.equals(paperCard.getRarity()) || CardRarity.Special.equals(paperCard.getRarity()))
+                        .filter(paperCard -> paperCard.getRarity() == CardRarity.Uncommon || paperCard.getRarity() == CardRarity.Special)
                         .collect(Collectors.toList());
                 if (!uncommonCards.isEmpty()) {
                     rewards.add(new Reward(Aggregates.random(uncommonCards)));
@@ -474,7 +483,7 @@ public class EnemySprite extends CharacterSprite implements Steerable<Vector2> {
                 }
                 //random commons from deck
                 List<PaperCard> commmonCards = paperCardList.stream()
-                        .filter(paperCard -> CardRarity.Common.equals(paperCard.getRarity()))
+                        .filter(paperCard -> paperCard.getRarity() == CardRarity.Common)
                         .collect(Collectors.toList());
                 if (!commmonCards.isEmpty()) {
                     rewards.add(new Reward(Aggregates.random(commmonCards)));
@@ -483,7 +492,7 @@ public class EnemySprite extends CharacterSprite implements Steerable<Vector2> {
                 }
                 //random rare from deck
                 List<PaperCard> rareCards = paperCardList.stream()
-                        .filter(paperCard -> CardRarity.Rare.equals(paperCard.getRarity()) || CardRarity.MythicRare.equals(paperCard.getRarity()))
+                        .filter(paperCard -> paperCard.getRarity() == CardRarity.Rare || paperCard.getRarity() == CardRarity.MythicRare)
                         .collect(Collectors.toList());
                 if (!rareCards.isEmpty()) {
                     rewards.add(new Reward(Aggregates.random(rareCards)));
@@ -501,7 +510,8 @@ public class EnemySprite extends CharacterSprite implements Steerable<Vector2> {
         if(data.rewards != null) { //Collect standard rewards.
             Deck enemyDeck = Current.latestDeck();
             // By popular demand, remove basic lands from the reward pool.
-            CardPool deckNoBasicLands = enemyDeck.getMain().getFilteredPool(PaperCardPredicates.fromRules(CardRulesPredicates.NOT_BASIC_LAND));
+            CardPool deckNoRestrictedEditions = enemyDeck.getMain().getFilteredPool(PaperCardPredicates.onlyPrintedInEditions(Config.instance().getConfigData().restrictedEditions).negate());
+            CardPool deckNoBasicLands = deckNoRestrictedEditions.getFilteredPool(PaperCardPredicates.fromRules(CardRulesPredicates.NOT_BASIC_LAND));
 
             for (RewardData rdata : data.rewards) {
                 rewards.addAll(rdata.generate(false,  enemyDeck == null ? null : deckNoBasicLands.toFlatList(),true ));
